fix: refactor layout to use grid for better responsiveness and alignment

--- a/src/app/app.module.scss
+++ b/src/app/app.module.scss
@@ -1,13 +1,17 @@
 @use "@/shared/styles/mixins" as *;
 
 .overlay {
-	align-items: center;
-	background-color: rgb(0 0 0 / 70%);
-	display: flex;
+	background-color: rgba(#000, 70%);
 	inset: 0;
-	justify-content: center;
+	overflow-y: auto;
 	padding: var(--spacing-lg);
 	position: fixed;
+}
+
+.container {
+	display: grid;
+	min-height: 100%;
+	place-content: center;
 }
 
 .modal {
@@ -63,15 +67,12 @@
 }
 
 .content {
-	display: flex;
-	flex-direction: column;
+	display: grid;
 	gap: var(--spacing-lg);
-	margin-block-end: var(--spacing-lg);
 }
 
 .footer {
 	display: flex;
 	gap: var(--spacing-md);
 	margin-block-start: 50px;
-	width: 100%;
 }
